testsuite/tests/partial-sigs/should_fail/T14449.stderr

T14449.hs:6:1: error: [GHC-88793]
    Couldn't match ‘a’ with ‘b’
      both bound by the partial type signature: f :: a -> b -> _
